# cuda-oxide

./: Justfile  README.md
.github/workflows/: status-guard.yml
crates/cargo-oxide/src/: commands.rs
crates/cuda-async/src/: device_operation.rs
crates/cuda-core/: README.md
crates/cuda-core/src/: device_buffer.rs
crates/cuda-core/tests/: pinned_host_buffer.rs
crates/cuda-host/src/: type_id.rs
crates/dialect-llvm/src/: export.rs
crates/dialect-llvm/src/export/: function.rs  module.rs  ops.rs  types.rs
crates/dialect-mir/src/: attributes.rs  types.rs
crates/dialect-mir/src/ops/: cast.rs
crates/llvm-export/src/: lib.rs
crates/llvm-export/src/export/: ops.rs  types.rs
crates/mir-importer/src/: pipeline.rs
crates/mir-importer/src/translator/: types.rs
crates/mir-lower/src/: lowering.rs
crates/mir-lower/src/convert/ops/: memory.rs  test_util.rs
crates/rustc-codegen-cuda/: README.md  STATUS.md
crates/rustc-codegen-cuda/examples/atomics/: README.md
crates/rustc-codegen-cuda/examples/vectorization/: Cargo.toml
crates/rustc-codegen-cuda/examples/vectorization/src/: main.rs
cuda-oxide-book/appendix/: building-from-source.md
cuda-oxide-book/compiler/: architecture-overview.md  lowering-pipeline.md
scripts/: check-error-example-status.sh  smoketest.sh
